RESOLVED FIXED307325
keyframes name "" (empty string) should be treated as invalid
https://bugs.webkit.org/show_bug.cgi?id=307325
Summary keyframes name "" (empty string) should be treated as invalid
Attachments
EWS
Comment 1 2026-02-10 14:39:29 PST
Committed 307207@main (3a1f35fcdd0a): <https://commits.webkit.org/307207@main> Reviewed commits have been landed. Closing PR #58195 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2026-02-10 14:40:12 PST
Note You need to log in before you can comment on or make changes to this bug.