Treat empty string keyframes‘ name as invalid https://bugs.webkit.org/show_bug.cgi?id=307325

Reviewed by Tim Nguyen.

This PR rejects "" at parsing time in favor of spec[1] changes.

[1] https://github.com/w3c/csswg-drafts/issues/7762

* LayoutTests/imported/w3c/resources/resource-files.json:
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parsing/keyframes-name-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parsing/keyframes-name-invalid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parsing/w3c-import.log:
* Source/WebCore/css/parser/CSSParser.cpp:
(WebCore::CSSParser::consumeKeyframesRule):
* Source/WebCore/css/parser/CSSPropertyParserConsumer+Animations.cpp:
(WebCore::CSSPropertyParserHelpers::consumeKeyframesName):

Canonical link: https://commits.webkit.org/307207@main